[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/HUDFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://menus/HUD/HUD.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0, 0, 0, 0.588235 )

[node name="HUD" type="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_right = 1024.0
margin_bottom = 512.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownContainer" type="PanelContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -53.5
margin_bottom = 53.5
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CountdownContainer"]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 87.0

[node name="ActionText" type="Label" parent="CountdownContainer/CenterContainer"]
margin_left = 495.0
margin_right = 528.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "3"

[node name="PointsDisplay" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 67.0
custom_constants/separation = 75
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePlayerOne" type="Label" parent="PointsDisplay"]
margin_left = 441.0
margin_right = 474.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "1"

[node name="ScorePlayerTwo" type="Label" parent="PointsDisplay"]
margin_left = 549.0
margin_right = 582.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "3"

[node name="Controls" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -169.0
margin_top = -67.0
margin_right = 169.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpButton" type="Button" parent="Controls"]
margin_right = 169.0
margin_bottom = 67.0
size_flags_horizontal = 3
text = "Up"

[node name="DownButton" type="Button" parent="Controls"]
margin_left = 169.0
margin_right = 338.0
margin_bottom = 67.0
size_flags_horizontal = 3
text = "Down"
[connection signal="button_down" from="Controls/UpButton" to="." method="_on_UpButton_button_down"]
[connection signal="button_up" from="Controls/UpButton" to="." method="_on_UpButton_button_up"]
[connection signal="button_down" from="Controls/DownButton" to="." method="_on_DownButton_button_down"]
[connection signal="button_up" from="Controls/DownButton" to="." method="_on_DownButton_button_up"]
